<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Controllers.Activities.NotificationsActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white">
        <!--Custom app name color -->
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:text="No"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:text="tifications"
            android:textColor="#3cff00"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/editTextSearchNotification"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="10dp"
            android:hint="Search query term"
            android:importantForAutofill="no"
            tools:ignore="HardcodedText,TextFields"
            tools:targetApi="o"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/search_input_style"
            android:drawableLeft="@drawable/ic_search_gray_24dp"/>

        <LinearLayout
            android:id="@+id/checkboxLL1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextSearchNotification"
            android:layout_marginTop="30dp"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/artsCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="Arts"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/politicsCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:text="Politics"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxLL2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkboxLL1"
            android:layout_marginTop="30dp"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/businessCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="Business"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/sportsCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sports"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxLL3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkboxLL2"
            android:layout_marginTop="30dp"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/entrepreneursCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="Entrepreneurs"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/travelCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Travel"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <TextView
            android:id="@+id/theLine"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/checkboxLL3"
            android:layout_margin="20dp"
            android:fontFamily="@font/lobster"
            android:background="#3cff00" />

        <TextView
            android:id="@+id/oncePerDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/theLine"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:text="Enable notifications(once per day)"
            android:textColor="#000"
            android:fontFamily="@font/alfa_slab_one"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />


        <Switch
            android:id="@+id/notificationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/theLine"
            android:layout_toEndOf="@+id/oncePerDay" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/notification" />
    </RelativeLayout>
</RelativeLayout>